# CppMutliModuleProjectTemplate

./: CMakeLists.txt  README.md  build.sh
ExecutableModule/: CMakeLists.txt
ExecutableModule/src/: main.cpp
ExecutableModule/unitTest/: AllUnitTest.cpp  CMakeLists.txt  pmathsTest.cpp
ExecutableModule/unitTest/gtest/: gtest-all.cc
LibraryModule/: CMakeLists.txt
LibraryModule/src/: pmaths.cpp
LibraryModule/unitTest/: AllUnitTest.cpp  CMakeLists.txt  pmathsTest.cpp
LibraryModule/unitTest/gtest/: gtest-all.cc
include/: ExecutableModule  LibraryModule
